<resources>
    <string name="app_name">Pomodoro Gothic</string>
    <string name="title_home">Home</string>
    <string name="title_archive">Archive</string>
    <string name="title_settings">Settings</string>

    <!-- Settings Strings -->
    <string name="settings_title">Settings</string>
    <string name="pomo_settings_section">Timer and Interval Settings</string>
    <string name="work_duration_label">Work Interval (minutes):</string>
    <string name="rest_duration_label">Rest Interval (minutes):</string>
    <string name="long_rest_duration_label">Long Rest Interval (minutes):</string>
    <string name="intervals_per_round_label">WIPR:</string>
    <string name="save_settings">Save</string>
    <string name="save_confirmation_msg">Settings successfully updated.</string>

    <string name="credits_title">Credits and Attribution</string>

    <!-- Home Strings -->
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Pause</string>
    <string name="timer_default">25:00</string>
    <string name="button_default">Start</string>
    <string name="round_display_format">Round %1$d</string>
    <string name="state_work">Work</string>
    <string name="state_short_break">Short Break</string>
    <string name="state_long_break">Long Break</string>
    <string name="reset_btn_text"><u>Reset</u></string>
    <string name="reset_confirm_title">Reset Timer</string>
    <string name="reset_confirm_msg">Are you sure you want to reset the timer? This will return you to Round 1.</string>
    <string name="reset_confirm_yes">Yes, Reset</string>
    <string name="reset_confirm_no">No, Cancel</string>
    <string name="session_prompt_title">Start a Session?</string>
    <string name="session_prompt_msg">Would you like to start a Session? This will track your rounds and create a note in the archive tab. You can still use the timer without starting a Session.</string>
    <string name="session_prompt_yes">Yes</string>
    <string name="session_prompt_no">No</string>
</resources>